<resources>
    <string name="app_name">Customer Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_image">image</string>
    <string name="lbl_confirm_password">Confirm Password</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_add_customer">Add Customer</string>
    <string name="lbl_more">More</string>
    <string name="firstname">Firstname</string>
    <string name="hint">hint</string>
    <string name="lastname">Lastname</string>
    <string name="other_name">Othername</string>
    <string name="contact">Contact</string>
    <string name="product_purchase">Product Purchase</string>
    <string name="quantity">Quantity</string>
    <string name="unit_price">Unit Price</string>
    <string name="save_customer">Save Customer</string>
    <string name="sign_out">Sign Out</string>
</resources>